    - Added indication of cyclic/catalyst ingredients in recipes, making it easier to plan their logistics
    - Added support for arithmetic operations in relevant textfields
    - Added the ability to set custom productivity boni for relevant recipes
    - Added stacks/timnescale and rockets/timescale item rate views
    - Added configuration options for item rate views in preferences
  Changes:
    - Updated the layout of the main interface to better accommodate new functionality and improve its semantics
    - Moved the global machine, fuel, beacon and module defaults from the preferences dialog into the machine/beacon dialogs
    - Enabled proper configuration of default fuels for machines with multiple fuel categories
    - Changed the timescale setting to be global instead of per factory, while dropping the per hour option
    - Adjusted mod for new module mechanics such as beacon profiles, machine base productivity, new productivity researches, maximum recipe productivity, and more
    - Changed the utility dialog function to request missing item delivery to create a new logistic section instead of having construction bots fulfill the order
    - Dropped Recipe Book support in favor of Factoriopedia, the new built-in recipe browser
    - Dropped support for boiler recipes and specifying amounts by ingredients, for now
    - Fixed and improved various parts of the interface
    - Updated the Factorio Library mod to 2.0.0
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.79
Date: 26. 08. 2024
  Features:
    - Added support for burnt items being output as burner fuel is used up (Thanks falsedrow!)
  Bugfixes:
    - Fixed that beacon module defaults would reset themselves when the active mods changed
    - Fixed recipes being moved above the top recipe in a subfloor (#312) (Thanks mattnotmitt!)
