@@ -29,7 +29,7 @@ MAGIC_NUMBERS = {
     blueprint_limit = 12,  -- Maxmimum number of blueprints allowed per factory
     module_dialog_element_width = 440,  -- Width of machine and beacon dialog elements
     left_titlebar_width = 30,  -- Width of the left titlebar buttons
-    right_titlebar_width = 269,  -- Width of the right titlebar buttons
+    right_titlebar_width = 301,  -- Width of the right titlebar buttons
     titlebar_label_width = 124  -- Width of the 'Factory Planner' titlebar label
 }
 
