@@ -14,6 +14,7 @@ fp_cycle_production_views=Cycle production view
 fp_up_floor=Go up a floor
 fp_top_floor=Go to the top floor
 fp_reverse_cycle_production_views=Reverse cycle production view
+fp_toggle_calculator=Toggle calculator
 fp_confirm_dialog=Confirm dialog
 fp_focus_searchfield=Focus searchfield
 
@@ -26,6 +27,7 @@ fp_up_floor=When down on a subfloor, go to the one above it
 fp_top_floor=When down on a subfloor, go to the topmost one
 fp_cycle_production_views=Cycles through the different views of the production table
 fp_reverse_cycle_production_views=Cycles backwards through the different views of the production table
+fp_toggle_calculator=Toggles the calculator dialog from anywhere
 fp_confirm_dialog=Confirms any modal dialog, even when no textfield is in focus
 fp_focus_searchfield=Focuses the cursor on the searchfield of the product picker, if possible
 
@@ -241,9 +243,14 @@ beacon_issue_no_modules=Select at least one module
 # Module configurator
 configurator_duplicate_module=Can't have two identical modules with the same quality
 
+# Calculator dialog
+calculator=Calculator
+toggle_history_tt=Toggle history
+
 # Title bar
 switch_to_compact_view=Switch to compact view\n- Press __CONTROL__fp_toggle_compact_view__ to switch -
 pause_on_interface=Toggle to automatically pause the game in the background when the main interface is open (Singleplayer only)\n- Press __CONTROL__fp_toggle_pause__ to toggle pause -
+open_calculator=Open Calculator\n- Press __CONTROL__fp_toggle_calculator__ to open calculator -
 close_interface=Close this interface\n- Press __CONTROL__fp_toggle_interface__ to close -
 
 # District info
