@@ -25,5 +25,6 @@ add_hotkey("top_floor", "SHIFT + ALT + UP", nil, "none", nil)
 add_hotkey("cycle_production_views", "CONTROL + RIGHT", nil, "none", nil)
 add_hotkey("reverse_cycle_production_views", "CONTROL + LEFT", nil, "none", nil)
 add_hotkey("confirm_dialog", "ENTER", "KP_ENTER", "none", nil)
+add_hotkey("toggle_calculator", "CONTROL + SHIFT + C", nil, "game-only", nil)
 add_hotkey("confirm_gui", "", nil, nil, "confirm-gui")
 add_hotkey("focus_searchfield", "", nil, nil, "focus-search")
