@@ -26,3 +26,9 @@ add_sprite("play", nil, 32, 2)
 add_sprite("limited_up", nil, 20, 1)
 add_sprite("limited_down", nil, 20, 1)
 add_sprite("stack", nil, 64, 1)
+add_sprite("calculator", nil, 64, 1)
+add_sprite("history", nil, 32, 1)
+add_sprite("plus", nil, 32, 1)
+add_sprite("minus", nil, 32, 1)
+add_sprite("multiply", nil, 32, 1)
+add_sprite("divide", nil, 32, 1)
