@@ -568,6 +568,11 @@ local function rebuild_compact_dialog(player, default_visibility)
     flow_title_bar.add{type="empty-widget", style="flib_titlebar_drag_handle",
         ignored_by_interaction=true}
 
+    local button_calculator = flow_title_bar.add{type="sprite-button", sprite="fp_calculator",
+        tooltip={"fp.open_calculator"}, style="fp_button_frame", mouse_button_filter={"left"},
+        tags={mod="fp", on_gui_click="open_calculator_dialog"}}
+    button_calculator.style.padding = -3
+
     local button_close = flow_title_bar.add{type="sprite-button", tags={mod="fp", on_gui_click="close_compact_dialog"},
         sprite="utility/close", tooltip={"fp.close_interface"}, style="fp_button_frame", mouse_button_filter={"left"}}
     button_close.style.padding = 1
