@@ -39,6 +39,7 @@ Date: 20. 07. 2024
     - Added the ability to set custom productivity boni for relevant recipes
     - Added stacks/timnescale and rockets/timescale item rate views
     - Added configuration options for item rate views in preferences
+    - Added a simple pocket calculator utility
   Changes:
     - Updated the layout of the main interface to better accommodate new functionality and improve its semantics
     - Moved the global machine, fuel, beacon and module defaults from the preferences dialog into the machine/beacon dialogs
